--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
+    "react-share": "^5.1.0",
+    "react-share-social": "^0.1.60",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
