--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
